--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,7 @@
         <title>Samuel Schultz Resume</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styleA.css">
+        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     </head>
 
 <body>   <!-- Personal Information -->
@@ -15,7 +16,7 @@
         <p class="personal">Samuel Schultz</p>
         <p class="personal">Fort Thomas, Kentucky</p>
         <span class="personal">sam.schultz@outlook.com | 513.418.1632</span>
-        <span class="personal2"><a href="https://www.linkedin.com/in/samuel-schultz-217952126/" target="_blank">Linkedin</a></span>
+        <span class="personal2" style="position:relative ; right: 80px;"><a href="https://www.linkedin.com/in/samuel-schultz-217952126/" target="_blank">Linkedin</a></span>
         <span class="personal2"><a href="https://github.com/SamSchultz98" target="_blank">Github</a></span>
     </div>
 
